fixed the mysql backend

--- a/circus.ini
+++ b/circus.ini
@@ -10,7 +10,7 @@ numprocesses = 1
 copy_env = 1
 
 [watcher:mysql]
-cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handlers.delay.sleep=1
+cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handlers.dummy.keep_alive=1 
 numprocesses = 1
 copy_env = 1
 
