added redis and memcache

--- a/circus.ini
+++ b/circus.ini
@@ -10,12 +10,12 @@ numprocesses = 1
 copy_env = 1
 
 [watcher:mysql]
-cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handlers.dummy.keep_alive=1 
+cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handlers.dummy.keep_alive=1
 numprocesses = 1
 copy_env = 1
 
 [watcher:es]
-cmd = vaurien --proxy 0.0.0.0:9202 --backend 0.0.0.0:9200
+cmd = vaurien --proxy 0.0.0.0:9202 --backend 0.0.0.0:9200 --handlers.dummy.keep_alive=1
 numprocesses = 1
 copy_env = 1
 
@@ -31,5 +31,15 @@ copy_env = 1
 
 [watcher:graphite]
 cmd = vaurien --proxy 0.0.0.0:2004 --backend 0.0.0.0:2003
+numprocesses = 1
+copy_env = 1
+
+[watcher:memcache]
+cmd = vaurien --proxy 0.0.0.0:11212 --backend 0.0.0.0:11211
+numprocesses = 1
+copy_env = 1
+
+[watcher:redis]
+cmd = vaurien --proxy 0.0.0.0:6380 --backend 0.0.0.0:6379
 numprocesses = 1
 copy_env = 1
