New style options

--- a/circus.ini
+++ b/circus.ini
@@ -5,17 +5,17 @@ pubsub_endpoint = tcp://127.0.0.1:5556
 stats_endpoint = tcp://127.0.0.1:5557
 
 [watcher:smtp]
-cmd = vaurien --proxy 0.0.0.0:2525 --backend 0.0.0.0:25
+cmd = vaurien --protcol smtp --proxy 0.0.0.0:2525 --backend 0.0.0.0:25
 numprocesses = 1
 copy_env = 1
 
 [watcher:mysql]
-cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handlers.dummy.keep_alive=1
+cmd = vaurien --proxy 0.0.0.0:3307 --backend 0.0.0.0:3306 --stay-connected --handler-dummy-keep-alive 1
 numprocesses = 1
 copy_env = 1
 
 [watcher:es]
-cmd = vaurien --proxy 0.0.0.0:9202 --backend 0.0.0.0:9200 --handlers.dummy.keep_alive=1
+cmd = vaurien --protocol http --proxy 0.0.0.0:9202 --backend 0.0.0.0:9200
 numprocesses = 1
 copy_env = 1
 
@@ -35,11 +35,11 @@ numprocesses = 1
 copy_env = 1
 
 [watcher:memcache]
-cmd = vaurien --proxy 0.0.0.0:11212 --backend 0.0.0.0:11211
+cmd = vaurien --protocol memcache --proxy 0.0.0.0:11212 --backend 0.0.0.0:11211
 numprocesses = 1
 copy_env = 1
 
 [watcher:redis]
-cmd = vaurien --proxy 0.0.0.0:6380 --backend 0.0.0.0:6379
+cmd = vaurien --protocol redis --proxy 0.0.0.0:6380 --backend 0.0.0.0:6379 
 numprocesses = 1
 copy_env = 1
